[gd_scene load_steps=13 format=3 uid="uid://ngg45r2ch13j"]

[ext_resource type="Script" path="res://scripts/glownemenu.gd" id="1_dxaeb"]
[ext_resource type="Texture2D" uid="uid://cimbx0jj5v4wq" path="res://assets/spirites/menu, przyciski/menu, przyciski/Layer 7.png" id="2_3cqys"]
[ext_resource type="Texture2D" uid="uid://bg1ek3jicmcov" path="res://assets/spirites/menu, przyciski/menu, przyciski/Layer 7 copy 2-1.png" id="3_e6l81"]
[ext_resource type="Texture2D" uid="uid://b4a45saa6lvr7" path="res://assets/spirites/menu, przyciski/menu, przyciski/Nostalgic Jump.png" id="3_jquxp"]
[ext_resource type="AudioStream" uid="uid://cuw0vgtxeossg" path="res://assets/spirites/sounds/menuspcinv.mp3" id="3_xwjlh"]
[ext_resource type="Texture2D" uid="uid://b8jvanixdh1np" path="res://assets/spirites/menu, przyciski/menu, przyciski/Layer 7 copy.png" id="4_yhytu"]
[ext_resource type="Texture2D" uid="uid://diysr4x4yenov" path="res://assets/spirites/menu, przyciski/menu, przyciski/Layer 7 copy-1.png" id="5_jvhg4"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_esudm"]

[sub_resource type="Theme" id="Theme_8n3y6"]
Button/colors/font_color = Color(0.991599, 0.985343, 0.983316, 1)
Button/colors/font_disabled_color = Color(0.633534, 0.95223, 0.850709, 0.5)
Button/colors/font_hover_color = Color(0.757964, 0.0828307, 0.565346, 1)
Button/colors/icon_normal_color = Color(1, 1, 1, 1)
Button/font_sizes/font_size = 16

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_m3ak4"]

[sub_resource type="Theme" id="Theme_edwf5"]

[sub_resource type="LabelSettings" id="LabelSettings_qdlrp"]
font_size = 49
font_color = Color(1, 0.542972, 0.994417, 1)
outline_size = 10
outline_color = Color(0.829922, 0.0176759, 0.243887, 1)
shadow_color = Color(0.72549, 0.152941, 0.52549, 0)

[node name="GlowneMenu" type="Control"]
texture_filter = 1
material = SubResource("CanvasItemMaterial_esudm")
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_8n3y6")
script = ExtResource("1_dxaeb")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -160.0
offset_top = -92.0
offset_right = 160.0
offset_bottom = 92.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 0
texture = ExtResource("2_3cqys")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_m3ak4")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -103.5
offset_top = -89.0
offset_right = 103.5
grow_horizontal = 2
grow_vertical = 0
theme = SubResource("Theme_edwf5")

[node name="WyjscieB" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("3_e6l81")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -139.5
offset_top = -223.0
offset_right = 139.5
offset_bottom = -155.0
grow_horizontal = 2
grow_vertical = 2
text = "Wybierz grÄ™"
label_settings = SubResource("LabelSettings_qdlrp")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -504.0
offset_top = -38.5
offset_right = 504.0
offset_bottom = 38.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40

[node name="NostalgicJump1" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("3_jquxp")

[node name="StarSiege" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("4_yhytu")

[node name="Wegorz2" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("5_jvhg4")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2(72, 285.5)
stream = ExtResource("3_xwjlh")
volume_db = -10.0
autoplay = true

[connection signal="pressed" from="VBoxContainer/WyjscieB" to="." method="_on_wyjscie_b_pressed"]
[connection signal="pressed" from="HBoxContainer/NostalgicJump1" to="." method="_on_nostalgic_jump_1_pressed"]
[connection signal="pressed" from="HBoxContainer/StarSiege" to="." method="_on_star_siege_pressed"]
[connection signal="pressed" from="HBoxContainer/Wegorz2" to="." method="_on_wegorz_2_pressed"]
